# website

./: .gitignore  Cargo.toml  Dockerfile  Pipfile  article_template.html  convert.py  db.sql  docker-compose.yaml  ingres.yaml  local_build.py  nathanielcurnick.yaml  pages.todo  postgres-configmap.yaml  postgres-deployment-arm.yaml  postgres-deployment.yaml  postgres-storage.yaml  readme.md  website-arm.yaml  website-dev.yaml  website.yaml
assets/: robots.txt
assets/blog-assets/2025-01-04-kalman-filter-falling/: plots.js
assets/blog-assets/2025-01-11-kalman-filter-constant-velocity/: plots.js
assets/blog-assets/2025-02-08-kalman-filter-falling-control/: plots.js
assets/blog-assets/2025-02-15-kalman-filter-cannon-ball/: plots.js
assets/blog-assets/2025-02-22-kalman-filter-sin-wave/: alternative.js  linear_a_priori.js  (+4 more)
assets/css/: blog.css  hjs.css  nav.css  style.css  toolbox.css
blog/2022-05-01/: on_the_british_welfare_state.json  on_the_british_welfare_state.md
blog/2022-05-08/: how_to_read_a_book.md
blog/2022-07-10/: after_the_welfare_state.json  after_the_welfare_state.md
blog/2022-07-24/: lifetimes_and_ownership.json
blog/2022-12-19/: after_the_welfare_state.json  after_the_welfare_state.md
blog/2022Q4/: after_the_welfare_state.html.tera
src/: blog.rs  context.rs  index.html  main.html  main.rs
src/database/: mod.rs
src/portals/: economic_portal.html  history_portal.html  mod.rs  philosophy_portal.html  politics_portal.html  portal_main.html  portals.rs  science_portal.html  urban_portal.html
src/resources/: style.css
src/routes/: basic_mathematics.rs  basic_physics.rs  economics.rs  history.rs  mod.rs  philosophy.rs  physics.rs  politics.rs  polymath.rs  portals.rs  programming.rs  science.rs
src/teaching_pages/: learn_maths_physics_programming.html
src/tests/: mod.rs
src/utils/: plotting.rs
templates/: blog.html.tera  blog_index.html.tera  index.html.tera  tags.html.tera
templates/blog/: blog_main.html.tera
templates/courses/: courses.html.tera
templates/physics/: kinematics.html.tera
templates/portals/: economic_portal.html.tera  history_portal.html.tera  politics_portal.html.tera  portal_main.html.tera  science_portal.html.tera  urban_portal.html.tera
templates/toolbox/: geodesics.html.tera  haversine.html.tera  index.html.tera
templates/utils/: nav.html.tera
xml/: sitemap-base.xml
(+372 files in other folders)
