[package]
name = "website"
version = "0.0.14"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.134", features = ["derive"] }
serde_json = "1.0.77"
tokio = { version = "1.29.1", features = ["full"] }
tera = "1.15.0"
rocket = "0.5.1"
rocket_codegen = "0.5.1"
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
plotly = { git = "https://github.com/AnBowell/plotly.git", branch = "mesh3d" }
itertools = "0.11.0"
itertools-num = "0.1.3"
once_cell = "1.15.0"
chrono = { version = "0.4.23", features = ["serde"] }
lazy_static = "1.4.0"
markdown = "1.0.0-alpha.11"
walkdir = "2.3.2"
blog-tools = "0.2.0"


[profile.release]
lto = true
